feature/java-21-and-more-coverage-on-tests
feature/java-21-and-more-coverage-on-tests